added endpoint swagger docs for auth
